<resources>
    <string name="app_name">Kundelik</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_games">Игры</string>
    <string name="menu_news">Новости</string>
    <string name="dg_new_subject">Новое занятие</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_select_start_time">Выберите время начало</string>
    <string name="dialog_select_finish_time">Выберите время завершение</string>
    <string name="dialog_start_time">Начало занятия</string>
    <string name="dialog_finish_time">Конец занятия</string>
    <string name="dialog_select_subject">Выберите занятие</string>
    <string name="dialog_select_new_subject">Новое занятие</string>
    <string name="dialog_add_own_subject">- Напишите имя предмета -</string>
    <string name="text_add">Добавить</string>
    <string name="schedule_main_text">Мое расписание</string>
    <string name="time_table_main_text">Мои занятия</string>
    <string name="subject_custom">Написать свой</string>


    <string name="subject_algebra">Алгебра</string>
    <string name="subject_english">Английский</string>
    <string name="subject_astronomy">Астрономия</string>
    <string name="subject_biology">Биология</string>
    <string name="subject_world_history">Всемирная история</string>
    <string name="subject_geography">География</string>
    <string name="subject_geometry">Геометрия</string>
    <string name="subject_natural_science">Естествознание</string>
    <string name="subject_informatics">Информатика</string>
    <string name="subject_history_of_kazakhstan">История Казахстана</string>
    <string name="subject_kazakh_language">Казахский язык</string>
    <string name="subject_regional_studies">Краеведение</string>
    <string name="subject_literature">Литература</string>
    <string name="subject_math">Математика</string>
    <string name="subject_music">Музыка</string>
    <string name="subject_bmt">НВП</string>
    <string name="subject_lsf">ОБЖ</string>
    <string name="subject_social_scince">Обществознание</string>
    <string name="subject_law">Право</string>
    <string name="subject_natural_history">Природоведение</string>
    <string name="subject_religion">Религиозные исследования</string>
    <string name="subject_art">Рисование</string>
    <string name="subject_russian_literature">Русская литература</string>
    <string name="subject_russian_language">Русский язык</string>
    <string name="subject_self_knowledge">Самопознание</string>
    <string name="subject_technology">Технология</string>
    <string name="subject_labor">Труд</string>
    <string name="subject_physics">Физика</string>
    <string name="subject_physical_education">Физическая культура</string>
    <string name="subject_philosophy">Философия</string>
    <string name="subject_chemistry">Химия</string>
    <string name="subject_individual_and_society">Челевок и общество</string>
    <string name="subject_drawing">Черчение</string>
    <string name="subject_calligraphy">Чистописание</string>
    <string name="subject_reading">Чтение</string>
    <string name="subject_ecology">Экология</string>
    <string name="subject_economy">Экономика</string>
    <string name="fragment_timetable_choose_time">- Нажмите, чтобы выбрать -</string>

    <string name="info_text_no_subject">Нет занятий</string>
    <string name="info_text_subject">занятий</string>
    <string name="info_text_tasks">Задачи</string>
    <string name="info_text_grades">Оценки</string>
    <string name="info_text_hw_subjects">ДЗ по предмету</string>
    <string name="info_text_hw_grades">Оценки по предмету</string>
    <string name="info_text_hw_subject">Оценка по предмету</string>
    <string name="info_text_day_advice">Совет дня</string>

    <string name="info_text_home_word">Домашняя работа</string>
    <string name="info_text_enter_text">Выбрать время</string>

    <string name="info_text_notify_day_before">Напомнить за день</string>
    <string name="info_text_choose_time">Выбрать время</string>

    <string name="error_text_oops">Oops!</string>
    <string name="error_info_wait_next_version">Данной функцией \n Вы сможете воспользоваться \n в следующей версии приложения.</string>

</resources>
