<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/MySwitch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="kz.edu.sdu.rauanassabayev.kundelik.Fragments.AddHWFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">
        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/tv_subject_name"
            android:paddingTop="10dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorAccent"
            android:text="@string/subject_history_of_kazakhstan" />
        <TextView
            android:id="@+id/tv_stc_grade"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f6f6f6"
            android:text="@string/info_text_hw_subject"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#858585"
            android:textSize="18sp" />
        <RelativeLayout
            android:id="@+id/rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/ll_list_grades"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:weightSum="5">
                <Button
                    android:id="@+id/bt_grade1"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_primary"
                    android:text="1"
                    android:textSize="29sp"
                    android:textColor="@color/colorPrimaryWhite" />
                <Button
                    android:id="@+id/bt_grade2"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_primary"
                    android:text="2"
                    android:textSize="29sp"
                    android:textColor="@color/colorPrimaryWhite"  />
                <Button
                    android:id="@+id/bt_grade3"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_primary"
                    android:text="3"
                    android:textSize="29sp"
                    android:textColor="@color/colorPrimaryWhite"  />
                <Button
                    android:id="@+id/bt_grade4"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_primary"
                    android:text="4"
                    android:textSize="29sp"
                    android:textColor="@color/colorPrimaryWhite"  />
                <Button
                    android:id="@+id/bt_grade5"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_primary"
                    android:text="5"
                    android:textSize="29sp"
                    android:textColor="@color/colorPrimaryWhite"  />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/ll_list_grades">
                <TextView
                    android:id="@+id/tv_stc_tip"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#f6f6f6"
                    android:text="@string/info_text_day_advice"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#858585"
                    android:textSize="18sp" />
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/tv_tip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="19sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:text="Учитесь у всех, не подражайте никому."/>
                </ScrollView>
            </LinearLayout>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="15dp"
                app:backgroundTint="@android:color/white"
                android:src="@drawable/ic_add" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>